--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "@stackframe/stack": "^2.8.48",
     "dotenv": "^17.2.3",
     "next": "16.0.1",
     "react": "19.2.0",
